Fix ugly wrapping between radio and label
Via https://stackoverflow.com/a/512769/500207 !

--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,8 @@
-.input-label + .input-label {
+label + label {
   padding-left:0.4em;
+}
+label {
+  white-space:nowrap;
 }
 li + li {
   padding-top: 0.4em;
